Começo da Implementação de mongoDB